Fixed user card alignments

--- a/src/routes/admin/users/index.css
+++ b/src/routes/admin/users/index.css
@@ -1,15 +1,18 @@
 .card-container{
   display: flex;
   flex-wrap: wrap;
-  width: 80vw;
+  width: 90vw;
   margin: 0 auto;
 }
 
 .userCard{
+  flex-shrink: 0;
+  flex-basis: calc(90vw/4 - 1em);
   color: rgb(55,55,55);
-  min-width: 100px;
+  min-width: 350px;
+  width: auto;
   background-color: rgba(255,255,255,0.9);
-  margin: 0.5em;
   padding: 1em;
   border-radius: 0.2em;
+  margin: 0.5em;
 }
